font weight on safari bug

--- a/src/assets/styles/pages/home/stats.css
+++ b/src/assets/styles/pages/home/stats.css
@@ -21,7 +21,7 @@
 
 .stats-section__title {
   font-family: amaticSC;
-  font-size: 4rem;
+  font-size: 3.7rem;
   color: var(--color-text-primary);
   text-align: center;
   margin: 2rem 0;
