--- a/src/components/admin/upload.css
+++ b/src/components/admin/upload.css
@@ -1,3 +1,6 @@
+.upload {
+  padding: 2rem;
+}
 .upload__images-title {
   font-family: Inter;
   font-size: 24px;
